[gd_scene load_steps=17 format=3 uid="uid://nxom3gyyo33n"]

[ext_resource type="Script" path="res://testMini/character_body_2d.gd" id="1_x450t"]
[ext_resource type="Texture2D" uid="uid://cbfydio3kgbjy" path="res://assets/EmoteTest/pispSMUG.png" id="2_qbynd"]
[ext_resource type="Script" path="res://testMini/HandPaths.gd" id="3_d6m8y"]
[ext_resource type="Texture2D" uid="uid://dw6qs6yhr1xre" path="res://assets/hands/wavetest.png" id="4_gmgnv"]
[ext_resource type="Script" path="res://testMini/HandPathClick.gd" id="5_kyb7r"]
[ext_resource type="Texture2D" uid="uid://o1u4qw3dqns7" path="res://assets/hands/pointertest.png" id="6_173lr"]
[ext_resource type="Texture2D" uid="uid://buktowx0fov3v" path="res://assets/hands/rudetest.png" id="7_xmgyh"]
[ext_resource type="Texture2D" uid="uid://cqbjskgwv3sgh" path="res://assets/hands/fistholder.png" id="8_p3ylp"]
[ext_resource type="Texture2D" uid="uid://dlc4s5lmbasr7" path="res://icon.svg" id="9_els74"]
[ext_resource type="Script" path="res://testMini/mini_editormenu.gd" id="9_kpi5v"]
[ext_resource type="Texture2D" uid="uid://co2ae5puffk8f" path="res://assets/catgoatlogosquare500.png" id="10_6drkj"]

[sub_resource type="Curve2D" id="Curve2D_43x0y"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -160, -50, -20.2043, 9.54093, 20.2043, -9.54093, -130, -72, 0, 0, 0, 0, -82, -82)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_s8twe"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 466.381, 0, 0, 0, 0, 0, 677.064, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_2qkbx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 426.054, -160.87, 0, 0, 0, 0, 426.054, -447.826)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_abqo4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -330.435, 65.2173, 0, 0, 0, 0, -665.217, 65.2173)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6whdi"]
size = Vector2(127.105, 127.105)

[node name="TestScene" type="Node"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_x450t")

[node name="MiniSprite" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(0.23, 0.23)
texture = ExtResource("2_qbynd")

[node name="Wave" type="Path2D" parent="CharacterBody2D/MiniSprite"]
scale = Vector2(4.34783, 4.34783)
curve = SubResource("Curve2D_43x0y")

[node name="PathFollow2D" type="PathFollow2D" parent="CharacterBody2D/MiniSprite/Wave"]
position = Vector2(-89.2237, -81.5891)
rotation = -0.0819814
progress = 79.5467
loop = false
script = ExtResource("3_d6m8y")

[node name="WaveHand" type="Sprite2D" parent="CharacterBody2D/MiniSprite/Wave/PathFollow2D"]
unique_name_in_owner = true
visible = false
scale = Vector2(0.465, 0.465)
texture = ExtResource("4_gmgnv")
flip_h = true

[node name="Punch" type="Path2D" parent="CharacterBody2D/MiniSprite"]
scale = Vector2(4.34783, 4.34783)
curve = SubResource("Curve2D_43x0y")

[node name="Orbit" type="Node2D" parent="CharacterBody2D/MiniSprite"]
unique_name_in_owner = true

[node name="Path2D" type="Path2D" parent="CharacterBody2D/MiniSprite/Orbit"]
curve = SubResource("Curve2D_s8twe")

[node name="PathFollow2D" type="PathFollow2D" parent="CharacterBody2D/MiniSprite/Orbit/Path2D"]
position = Vector2(466.381, 0)
loop = false
script = ExtResource("5_kyb7r")

[node name="OrbitHand" type="Sprite2D" parent="CharacterBody2D/MiniSprite/Orbit/Path2D/PathFollow2D"]
unique_name_in_owner = true
visible = false
position = Vector2(0.00012207, 0)
rotation = 1.5708
scale = Vector2(2.02174, 2.02174)
texture = ExtResource("6_173lr")

[node name="Vertical" type="Path2D" parent="CharacterBody2D/MiniSprite"]
curve = SubResource("Curve2D_2qkbx")

[node name="PathFollow2D" type="PathFollow2D" parent="CharacterBody2D/MiniSprite/Vertical"]
position = Vector2(426.054, -160.87)
rotation = -1.5708
loop = false
script = ExtResource("3_d6m8y")

[node name="VerticalHand" type="Sprite2D" parent="CharacterBody2D/MiniSprite/Vertical/PathFollow2D"]
unique_name_in_owner = true
visible = false
rotation = 1.5708
scale = Vector2(1.71, 1.71)
texture = ExtResource("7_xmgyh")

[node name="Horizontal" type="Path2D" parent="CharacterBody2D"]
scale = Vector2(0.23, 0.23)
curve = SubResource("Curve2D_abqo4")

[node name="PathFollow2D" type="PathFollow2D" parent="CharacterBody2D/Horizontal"]
position = Vector2(-330.435, 65.2173)
rotation = 3.14159
loop = false
script = ExtResource("3_d6m8y")

[node name="HoritonalHand" type="Sprite2D" parent="CharacterBody2D/Horizontal/PathFollow2D"]
unique_name_in_owner = true
visible = false
scale = Vector2(1.82, 1.82)
texture = ExtResource("8_p3ylp")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_6whdi")

[node name="DashTimer" type="Timer" parent="CharacterBody2D"]
wait_time = 0.3
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_kpi5v")

[node name="FileDialog" type="FileDialog" parent="Control"]
title = "Open a File"
initial_position = 2
size = Vector2i(717, 425)
transient = false
exclusive = false
always_on_top = true
popup_window = true
ok_button_text = "Open"
file_mode = 0
access = 2
root_subfolder = "G:\\Documents\\0 Godot Practice\\handtest"
use_native_dialog = true

[node name="AspectRatioContainer5" type="AspectRatioContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -357.5
offset_top = -346.0
offset_right = 357.5
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/AspectRatioContainer5"]
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="VSplitContainer" type="VSplitContainer" parent="Control/AspectRatioContainer5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Path" type="BoxContainer" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
vertical = true

[node name="PathTypes" type="Label" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path"]
layout_mode = 2
text = "Paths"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CheckButton" type="CheckButton" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path/HBoxContainer"]
layout_mode = 2
text = "H Flip"

[node name="CheckButton2" type="CheckButton" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path/HBoxContainer"]
layout_mode = 2
text = "V Flip"

[node name="Paths" type="GridContainer" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
columns = 2

[node name="Arch" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path/Paths"]
layout_mode = 2
texture = ExtResource("9_els74")

[node name="Orbit" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path/Paths"]
layout_mode = 2
texture = ExtResource("9_els74")

[node name="Vertical" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path/Paths"]
layout_mode = 2
texture = ExtResource("9_els74")

[node name="Horizontal" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Path/Paths"]
layout_mode = 2
texture = ExtResource("9_els74")

[node name="Hands" type="BoxContainer" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
vertical = true

[node name="HandTypes" type="Label" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands"]
layout_mode = 2
size_flags_vertical = 1
text = "Hands"
horizontal_alignment = 1

[node name="Hands" type="GridContainer" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands"]
layout_mode = 2
size_flags_horizontal = 0
columns = 2

[node name="Hand1" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands/Hands" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="Hand2" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands/Hands" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="Hand3" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands/Hands" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="Hand4" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands/Hands" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CheckButton" type="CheckButton" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands/HBoxContainer2"]
layout_mode = 2
text = "H Flip"

[node name="CheckButton2" type="CheckButton" parent="Control/AspectRatioContainer5/HBoxContainer/VSplitContainer/Hands/HBoxContainer2"]
layout_mode = 2
text = "V Flip"

[node name="VSeparator" type="VSeparator" parent="Control/AspectRatioContainer5/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/AspectRatioContainer5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MiniName" type="Label" parent="Control/AspectRatioContainer5/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "MiniTuberName"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control/AspectRatioContainer5/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="Control/AspectRatioContainer5/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_6drkj")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/AspectRatioContainer5/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Button" type="Button" parent="Control/AspectRatioContainer5/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Button2" type="Button" parent="Control/AspectRatioContainer5/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="VSeparator2" type="VSeparator" parent="Control/AspectRatioContainer5/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="Faces" type="BoxContainer" parent="Control/AspectRatioContainer5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
vertical = true

[node name="EmoteSprites" type="Label" parent="Control/AspectRatioContainer5/HBoxContainer/Faces"]
layout_mode = 2
size_flags_vertical = 0
text = "Emotes"
horizontal_alignment = 1

[node name="Emotes" type="GridContainer" parent="Control/AspectRatioContainer5/HBoxContainer/Faces"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
columns = 2
metadata/_edit_group_ = true

[node name="Emote1" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/Faces/Emotes" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="Emote2" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/Faces/Emotes" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="Emote3" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/Faces/Emotes" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="Emote4" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/Faces/Emotes" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="Emote5" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/Faces/Emotes" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="Emote6" type="TextureRect" parent="Control/AspectRatioContainer5/HBoxContainer/Faces/Emotes" groups=["custom"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("9_els74")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/AspectRatioContainer5/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Title" type="Label" parent="Control/AspectRatioContainer5/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Editor"
horizontal_alignment = 1
